# local_transcribe

./: .gitignore  BATCH_TRANSCRIBE_README.md  BUILDPLAN.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  ISSUE.txt  QUICK_REFERENCE.md  README.md  SOP.md  START_HERE.md  TASKS.md  TODO.md  batch_transcribe.py  example_urls.txt  export-firefox-cookies.py  install_with_gpu.sh  local_transcribe.py  push_transcripts.bash  pyproject.toml  reconcile.py  requirements.txt  run_transcribe.sh  test.bash  test_cuda_setup.sh
.claude/rules/: global.md
.github/instructions/: global.instructions.md
docs/: UPGRADE_SUMMARY.md  WHATS_NEW.md
src/local_transcribe/: __init__.py  cli.py  logging_setup.py
src/local_transcribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/local_transcribe/services/: downloader.py  pipeline.py  rate_limiter.py  status_store.py  transcriber.py  verify_status.py
src/local_transcribe/utils/: doctor.py  files.py
