[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-transcribe"
version = "0.1.2"
description = "Local YouTube transcription with Whisper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name"}
]
dependencies = [
    "yt-dlp>=2025.1.1",
    "faster-whisper>=1.0.3",
    "tqdm>=4.66.2",
    "soundfile>=0.12.1",
    "ctranslate2>=4.3.1",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "nvidia-cublas",
    "nvidia-cudnn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
lt = "local_transcribe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

